Removed Concept and Style text. Updated base ball speed, powerup colors, and max game levels in constants

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="scoreDisplay">Score: 0</div>
             <div id="livesDisplay">Lives: 3</div>
             <div id="levelDisplay">Level: 1</div>
-             <div id="aestheticDisplay">Arkanoid Style</div>
+             <div id="aestheticDisplay"></div>
          </div>
 
          <div id="bossHPBar">
