Added to setting page: Color pallet swap functionality dropdown menu, User defined baseBallSpeed by input

--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
                       Developer Mode:
                      <input type="checkbox" id="developerModeToggle">
                   </label>
+                  <div id="colorPaletteSelectContainer">
+                      <label for="colorPaletteSelect">Color Palette:</label>
+                      <select id="colorPaletteSelect"></select>
+                  </div>
+                  <div id="baseBallSpeedContainer">
+                      <label for="baseBallSpeedInput">Base Ball Speed:</label>
+                      <input type="number" id="baseBallSpeedInput" min="1">
+                  </div>
                   <button id="backToSettingsMenuBtn" class="game-btn">BACK</button>
              </div>
 
