--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                       <label for="baseBallSpeedInput">Base Ball Speed:</label>
                       <input type="number" id="baseBallSpeedInput" min="1">
                   </div>
+                  <div id="colorPalettePreview"></div>
                   <button id="backToSettingsMenuBtn" class="game-btn">BACK</button>
              </div>
 
